# LakeSnes

./: README-ANDROID.md  gradlew  settings.gradle
.github/workflows/: build.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  emulator_jni.cpp
app/src/main/cpp/SDL2/include/: SDL.h
app/src/main/cpp/SDL2/lib/: SDL2_stub.c
app/src/main/java/com/lakesnes/emulator/: EmulatorActivity.java
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_emulator.xml  layout_gamepad.xml
app/src/main/res/values/: strings.xml  styles.xml
snes/: snes.h
